--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -1,22 +1,9 @@
 {
-  "title": "NIS2 GAP Analysis Tool",
-  "demo": "FREE DEMO",
-  "startDemo": "Start free demo now",
-  "pro": "PRO €19/month",
-  "upgrade": "Upgrade to full version",
-  "login": "Login",
-  "register": "Register",
-  "email": "Email",
-  "password": "Password",
-  "noAccount": "No account? Register",
-  "hasAccount": "Already have account? Login",
-  "logout": "Logout",
-  "compliance": "Compliance",
-  "subtasks": "Subtasks",
-  "critical": "Critical risks",
-  "notStarted": "Not Started",
-  "nonCompliant": "Non-compliant",
-  "partial": "Partially",
-  "compliant": "Compliant",
-  "demoLimit": "DEMO version – you see only first 6 of 18 controls"
+  "heroSubtitle": "Jedini Hrvatski alat koji ti omogućuje potpunu usklađenost s NIS2 direktivom – bez konzultanata, bez Excel tablica, bez stresa.",
+  "controlsCount": "10 obveznih mjera rizik upravljanja\n(Članak 21. NIS2 Direktive)",
+  "autoTracking": "Automatsko praćenje napretka\nu stvarnom vremenu",
+  "pdfReport": "PDF izvještaj\nu jednom kliku",
+  "demoButton": "Pokreni Demo odmah",
+  "loginButton": "Prijava za korisnike",
+  "trustedBy": "Već koriste banke, energetski operateri i kritična infrastruktura u Hrvatskoj i regiji"
 }
